# Computer-Graphics

118010335_HW_1/: CMakeLists.txt  compile.sh  p2_1.cpp  p2_2.cpp  p2_3.cpp  p2_4.cpp
118010335_HW_2/: CMakeLists.txt  compile.sh  main.cpp  parameters.xml  readme.txt  xml.cpp  xml.h
118010335_HW_3&4/Assignment3&4/: compile.sh
118010335_HW_3&4/Assignment3&4/src/: drawrend.cpp  drawrend.h  rasterizer.cpp  rasterizer.h  texture.cpp  transforms.cpp
118010335_HW_5/Assignment5/: compile.sh
118010335_HW_5/Assignment5/CGL/: CMakeLists.txt
118010335_HW_5/Assignment5/CGL/src/: CMakeLists.txt
118010335_HW_5/Assignment5/bzc/: my_curve.bzc
118010335_HW_5/Assignment5/src/: bezierCurve.cpp  bezierCurve.h  meshEdit.cpp  meshEdit.h  student_code.cpp
118010335_HW_6/RayTracing1/: compile.sh
118010335_HW_6/RayTracing1/src/pathtracer/: bsdf.cpp  pathtracer.cpp
118010335_HW_6/RayTracing1/src/scene/: sphere.cpp
118010335_HW_7/RayTracing2/: compile.sh
118010335_HW_7/RayTracing2/src/application/: application.h
118010335_HW_7/RayTracing2/src/pathtracer/: camera_lens.cpp  pathtracer.cpp
118010335_Project/: compile.sh
118010335_Project/dae/sky/: CBspheres_bdpt.dae  CBspheres_lambertian_bdpt.dae  lam.dae
118010335_Project/src/application/: application.cpp  application.h  main.cpp
118010335_Project/src/pathtracer/: advanced_bsdf.cpp  bsdf.h  camera.cpp  pathtracer.cpp  pathtracer.h  raytraced_renderer.cpp  raytraced_renderer.h
118010335_Project/src/scene/: bbox.cpp  environment_light.cpp  environment_light.h  light.cpp  light.h  scene.h  sphere.cpp  triangle.cpp
(+3 files in other folders)
